[package]
authors = ["Ignacio Corderi <icorderi@msn.com>"]
description = "Configuration / settings backed by JSON files"
keywords = ["json", "config", "configuration", "settings"]
name = "jconfig"
version = "0.1.0"

[dependencies]
log = "0.3"
quick-error = "1.0"
rustc-serialize = "0.3"
traitobject = "0.0"
unicase = "1.4"
